# spectral-solvers

./: LICENSE  README.md  setup.cfg  setup.py
spectral_solvers/: basis.py  laguerre.py  mapping.py  spectral_solvers.py
src/spectral_solvers/: basis.py  hermite.py  spectral_solvers.py
