[metadata]
name = spectral_solvers
version = 0.0.1
author = Sijme-Jan Paardekooper
author_email = s.j.paardekooper@qmul.ac.uk
description = Tools for solving problems using spectral collocation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SijmeJan/spectral-solvers
project_urls =
    Bug Tracker = https://github.com/SijmeJan/spectral-solvers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = spectral_solvers
packages = find:
python_requires = >=3.6

[options.packages.find]
where = spectral_solvers